--- a/internal/assets/templates/crypto.html
+++ b/internal/assets/templates/crypto.html
@@ -26,13 +26,13 @@
     <div class="text-truncate">{{ .Name }}</div>
 </div>
 
-<a class="stock-chart" {{ if ne "" .SymbolLink }} href="{{ .SymbolLink }}" target="_blank" rel="noreferrer"{{ end }}>
-    <svg class="stock-chart shrink-0" viewBox="0 0 100 50">
+<a class="market-chart" {{ if ne "" .SymbolLink }} href="{{ .SymbolLink }}" target="_blank" rel="noreferrer"{{ end }}>
+    <svg class="market-chart shrink-0" viewBox="0 0 100 50">
         <polyline fill="none" stroke="var(--color-text-subdue)" stroke-width="1.5px" points="{{ .SvgChartPoints }}" vector-effect="non-scaling-stroke"></polyline>
     </svg>
 </a>
 
-<div class="stock-values shrink-0">
+<div class="market-values shrink-0">
     <div class="size-h3 text-right {{ if eq .PercentChange 0.0 }}{{ else if gt .PercentChange 0.0 }}color-positive{{ else }}color-negative{{ end }}">{{ printf "%+.2f" .PercentChange }}%</div>
     <div class="text-right">{{ .Currency }}{{ .Price | formatPrice }}</div>
 </div>
